Completed feature scaling

--- a/Criminal Prediction-Classification.ipynb
+++ b/Criminal Prediction-Classification.ipynb
@@ -2230,6 +2230,442 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Continuous variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since there is only one continuous variable, so no need to perform correlation analysis. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Categorical variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('O')"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datasetOR.iloc[:,2].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "72"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Total number of columns\n",
+    "len(datasetOR.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "there are only 2 continuous variable so there should be 70 categorical variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#store all categorical variable in a list\n",
+    "cat_names = []\n",
+    "for var in datasetOR.columns:\n",
+    "    if(datasetOR[var].dtype == 'object'):\n",
+    "        cat_names.append(var)\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Also remove the target variable from the list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cat_names.remove(\"Criminal\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "69"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(cat_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'VEREP'"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_names[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Apply Chi-square test of variable independance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IFATHER\n",
+      "1.1365417552402857e-80\n",
+      "NRCH17_2\n",
+      "5.062617307601705e-82\n",
+      "IRHHSIZ2\n",
+      "5.29223732019932e-32\n",
+      "IIHHSIZ2\n",
+      "0.5682250872739691\n",
+      "IRKI17_2\n",
+      "2.229436812047486e-12\n",
+      "IIKI17_2\n",
+      "0.5500429064567407\n",
+      "IRHH65_2\n",
+      "5.1269111603838625e-71\n",
+      "IIHH65_2\n",
+      "0.6726939145180273\n",
+      "PRXRETRY\n",
+      "0.7683652759234985\n",
+      "PRXYDATA\n",
+      "1.9403952443510532e-17\n",
+      "MEDICARE\n",
+      "4.784554839468574e-136\n",
+      "CAIDCHIP\n",
+      "5.672221737932961e-89\n",
+      "CHAMPUS\n",
+      "1.8663314333222418e-15\n",
+      "PRVHLTIN\n",
+      "0.0\n",
+      "GRPHLTIN\n",
+      "0.0\n",
+      "HLTINNOS\n",
+      "9.768070249613017e-101\n",
+      "HLCNOTYR\n",
+      "1.546626562029899e-103\n",
+      "HLCNOTMO\n",
+      "1.087057426217784e-24\n",
+      "HLCLAST\n",
+      "7.39946286402968e-92\n",
+      "HLLOSRSN\n",
+      "1.76794020306204e-70\n",
+      "HLNVCOST\n",
+      "3.7750262386411783e-34\n",
+      "HLNVOFFR\n",
+      "3.7750262386411783e-34\n",
+      "HLNVREF\n",
+      "3.7750262386411783e-34\n",
+      "HLNVNEED\n",
+      "3.7750262386411783e-34\n",
+      "HLNVSOR\n",
+      "3.7750262386411783e-34\n",
+      "IRMCDCHP\n",
+      "5.170075006148051e-63\n",
+      "IIMCDCHP\n",
+      "9.288483077260503e-23\n",
+      "IRMEDICR\n",
+      "3.890229481521732e-126\n",
+      "IIMEDICR\n",
+      "1.624585788714875e-13\n",
+      "IRCHMPUS\n",
+      "0.008244634264268592\n",
+      "IICHMPUS\n",
+      "1.1235060100042039e-14\n",
+      "IRPRVHLT\n",
+      "0.0\n",
+      "IIPRVHLT\n",
+      "1.5913042188845614e-105\n",
+      "IROTHHLT\n",
+      "5.98649728093572e-97\n",
+      "IIOTHHLT\n",
+      "2.208197118337278e-124\n",
+      "HLCALLFG\n",
+      "6.601359085360082e-11\n",
+      "HLCALL99\n",
+      "6.601359085360082e-11\n",
+      "ANYHLTI2\n",
+      "1.085839625969172e-96\n",
+      "IRINSUR4\n",
+      "1.01304714616455e-71\n",
+      "IIINSUR4\n",
+      "3.76662725646282e-26\n",
+      "OTHINS\n",
+      "1.2613347511447852e-17\n",
+      "CELLNOTCL\n",
+      "0.03995262909191307\n",
+      "CELLWRKNG\n",
+      "7.638225856349251e-10\n",
+      "IRFAMSOC\n",
+      "3.316387914902215e-64\n",
+      "IIFAMSOC\n",
+      "1.4626137499729182e-07\n",
+      "IRFAMSSI\n",
+      "0.6925793907101128\n",
+      "IIFAMSSI\n",
+      "5.347714462868998e-13\n",
+      "IRFSTAMP\n",
+      "0.5881599076507616\n",
+      "IIFSTAMP\n",
+      "0.00011420243504834036\n",
+      "IRFAMPMT\n",
+      "0.643841736392105\n",
+      "IIFAMPMT\n",
+      "1.3693306027338443e-10\n",
+      "IRFAMSVC\n",
+      "0.8939434253706444\n",
+      "IIFAMSVC\n",
+      "1.2351989748868782e-12\n",
+      "IRWELMOS\n",
+      "0.10403033998153546\n",
+      "IIWELMOS\n",
+      "4.646204594081104e-12\n",
+      "IRPINC3\n",
+      "2.3369945149540743e-155\n",
+      "IRFAMIN3\n",
+      "0.0\n",
+      "IIPINC3\n",
+      "1.3151064238328749e-05\n",
+      "IIFAMIN3\n",
+      "1.2667980661608687e-11\n",
+      "GOVTPROG\n",
+      "0.8841159491594262\n",
+      "POVERTY3\n",
+      "0.0\n",
+      "TOOLONG\n",
+      "0.05433502514702604\n",
+      "TROUBUND\n",
+      "5.5569596941761785e-05\n",
+      "PDEN10\n",
+      "3.1607013516361233e-12\n",
+      "COUTYP2\n",
+      "8.617565852020383e-11\n",
+      "MAIIN102\n",
+      "0.930407360266719\n",
+      "AIIND102\n",
+      "0.9130368783638704\n",
+      "VESTR\n",
+      "0.005535617499723689\n",
+      "VEREP\n",
+      "0.11160885067103277\n"
+     ]
+    }
+   ],
+   "source": [
+    "#loop for chi square values, store all columns which have p-value > 0.05\n",
+    "colHavGreaterPVal = []\n",
+    "from scipy.stats import chi2_contingency\n",
+    "for i in cat_names:\n",
+    "    print(i)\n",
+    "    chi2, p, dof, ex = chi2_contingency(pd.crosstab(datasetOR['Criminal'], datasetOR[i]))\n",
+    "    print(p)\n",
+    "    if(p>0.05):\n",
+    "         colHavGreaterPVal.append(i) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len( colHavGreaterPVal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since all the variables which has p>0.05(Accept null hypothesis,) variables are independent on the Target variable , so they will not explain variance of target variables, SO we need to remove all these variables from the datasetOR."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(41838, 72)"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datasetOR.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "datasetOR = datasetOR.drop(colHavGreaterPVal, axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(41838, 58)"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datasetOR.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "58"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "72-14"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we have removed all the un-necessary columns/ features."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
