--- a/Classification-Loan Prediction.ipynb
+++ b/Classification-Loan Prediction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### This is a classification problem. The data has 615 rows and 13 columns. Problem: Predict if a loan will get approved or not."
+    "##### This is a classification problem. The data has 615 rows and 13 columns. Problem: Predict if a loan will be paid or not."
    ]
   },
   {
