--- a/Criminal Prediction-Classification.ipynb
+++ b/Criminal Prediction-Classification.ipynb
@@ -2666,6 +2666,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 8- Feature Scaling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
